# rnn-filtering

./: .gitignore  README.md  pyproject.toml
docs/source/: README.md  conf.py  index.rst
src/linear_rnn_filtering/: __init__.py  hmm.py  loss_functions.py  parameters.py  rnn.py  types.py  utils.py
src/rnn_filtering/: __init__.py  training.py
src/rnn_filtering/hmm/: factory.py
src/rnn_filtering/rnn/: __init__.py  abstract.py  models.py  parameters.py  types.py
src/rnn_filtering/train/: __init__.py  loss_functions.py  utils.py
tests/: test_hmm.py  test_parameters.py  test_rnn.py  test_types.py
