[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-rnn-filtering"
version = "0.1.0"
description = "Linear RNN approximations to discrete HMM forward filtering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "NeuroStatsLab" },
]
keywords = ["hmm", "rnn", "filtering", "bayesian", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "optax>=0.1.7",
    "equinox>=0.13.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]
docs = [
    "sphinx>=7",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linear_rnn_filtering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I",
    "B",      # bugbear
    "C4",     # comprehensions
    "SIM",    # simplifications
    "UP",     # modern syntax
    "ARG",    # unused args
    "N",      # naming
]
ignore = [ # upper case letters are often used to represent matrices
    "N806", # allow uppercase variable names (N806)
    "N803" # allow uppercase function arguments (N806)
]
